--- a/TODO.txt
+++ b/TODO.txt
@@ -4,13 +4,13 @@ GENERAL:
 	- MEDIA ALTA i18n
 	- BAJA sass, less, compass o alguna de preprocesado de css
 
-- ALTA bug no se abre el fancybox de las movies.
-
 - ALTA imagenes de paginas de festivales al fondo de la convocatoria.
 
 - BAJA agregar una foto "Imagen no disponible" para ubicar si la pelicula no tiene foto.
 
 - MEDIA agregar semanas bars 2015
+
+- ALTA --> sprites de auspiciantes normal y grayscale en una misma imagen
 
 - MEDIA agregar algo que resalte que esta abierta la convocatoria.
 
@@ -18,4 +18,4 @@ GENERAL:
 
 - BAJA investigar acerca de reescribir urls (probar linkeado a las paginas como /php/contact.php o algo asi a ver que pasaba)
 
-- disable warnings de php en version de prod
+- BAJA instagram twitter y newsletter. footer.
