--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,8 @@
 GENERAL:
 	- BAJA eliminar transparencias donde sea posible (auspiciantes, programacion, footer)
 	- BAJA scratchs con opacity cambiarlos por imagen con esa opacidad.
-	- MEDIA ALTA i18n
+	- ALTA i18n
 	- BAJA sass, less, compass o alguna de preprocesado de css
-
-- ALTA spritificar imagenes estaticas.
 
 - BAJA agregar una foto "Imagen no disponible" para ubicar si la pelicula no tiene foto.
 
@@ -13,5 +11,3 @@ GENERAL:
 - MEDIA exportar a mysql las movies.
 
 - BAJA investigar acerca de reescribir urls (probar linkeado a las paginas como /php/contact.php o algo asi a ver que pasa)
-
-- BAJA instagram twitter y newsletter. footer.
